--- a/k8s/api-gateway-deployment.yaml
+++ b/k8s/api-gateway-deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - image: ${REPOSITORY_PREFIX}/spring-petclinic-cloud-api-gateway:latest
         name: api-gateway
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
             port: 8080
