--- a/k8s/customers-service-deployment.yaml
+++ b/k8s/customers-service-deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
       - image: ${REPOSITORY_PREFIX}/spring-petclinic-cloud-customers-service:latest
         name: customers-service
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
             port: 8080
