--- a/k8s/visits-service-deployment.yaml
+++ b/k8s/visits-service-deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - image: ${REPOSITORY_PREFIX}/spring-petclinic-cloud-visits-service:latest
         name: visits-service
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
             port: 8080
