Add rooms service

--- a/k8s/init-services/02-config-map.yaml
+++ b/k8s/init-services/02-config-map.yaml
@@ -111,6 +111,12 @@ data:
                 - Path=/api/customer/**
               filters:
                 - StripPrefix=2
+            - id: customers-service
+              uri: http://rooms-service.spring-petclinic.svc.cluster.local:8080
+              predicates:
+                - Path=/api/rooms/**
+              filters:
+                - StripPrefix=2
     vets:
       cache:
         ttl: 60
