--- a/spring-petclinic-rooms-service/src/main/resources/application.yml
+++ b/spring-petclinic-rooms-service/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
   profiles:
     active: production
 
+management:
+  metrics:
+    export:
+      wavefront:
+        apiToken: ""
 ---
 spring:
   config:
