--- a/k8s/rooms-service-deployment.yaml
+++ b/k8s/rooms-service-deployment.yaml
@@ -30,7 +30,7 @@ spec:
           - name: SPRING_DATASOURCE_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: vets-db-mysql
+                name: rooms-db-mysql
                 key: mysql-root-password
           livenessProbe:
             httpGet:
